--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Aviar Financial Services</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
